--- a/src/main/resources/views/userpopover.fxml
+++ b/src/main/resources/views/userpopover.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="448.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox fx:id="popOver" prefHeight="448.0" prefWidth="715.0" style="-fx-border-color: BLACK; -fx-border-radius: 10 10 10 10; -fx-background-radius: 10 10 10 10;" stylesheets="@../stylesheet/announcementsview.css">
@@ -48,7 +47,7 @@
                      <padding>
                         <Insets right="20.0" />
                      </padding></JFXTextField>
-                  <Label prefHeight="17.0" prefWidth="76.0" text="Voornaam" />
+                  <Label fx:id="voornaam" prefHeight="17.0" prefWidth="76.0" text="Voornaam" />
                   <JFXTextField fx:id="firstnameField" prefHeight="25.0" prefWidth="314.0" />
                </children>
                <VBox.margin>
@@ -60,12 +59,12 @@
             </HBox>
               <HBox prefHeight="52.0" prefWidth="640.0">
                   <children>
-                      <Label prefHeight="32.0" prefWidth="41.0" styleClass="text" text="Type" />
+                      <Label fx:id="type" prefHeight="32.0" prefWidth="41.0" styleClass="text" text="Type" />
                       <JFXComboBox fx:id="typeComboBox" prefHeight="25.0" prefWidth="246.0">
                      <padding>
                         <Insets right="20.0" />
                      </padding></JFXComboBox>
-                      <Label prefHeight="32.0" prefWidth="48.0" styleClass="text" text="Status" />
+                      <Label fx:id="status" prefHeight="32.0" prefWidth="48.0" styleClass="text" text="Status" />
                       <JFXComboBox fx:id="statusComboBox" prefHeight="31.0" prefWidth="304.0" />
                   </children>
                <padding>
@@ -74,8 +73,8 @@
               </HBox>
             <HBox prefHeight="60.0" prefWidth="640.0">
                <children>
-                  <Label prefHeight="21.0" prefWidth="60.0" text="Email" />
-                  <JFXTextField fx:id="usernameField" prefHeight="31.0" prefWidth="586.0" />
+                  <Label fx:id="email" prefHeight="21.0" prefWidth="60.0" text="Email" />
+                  <JFXTextField fx:id="emailField" prefHeight="31.0" prefWidth="586.0" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
